# engine-bench

./: .gitignore  README.md  generate_tasks.py  hp.txt  missing_cards.txt  pyproject.toml  todos.md
auxiliary_tasks/algo_bench/: README.md  agent_algo_bench.py  benchmark_ai.py  benchmark_existing_ai.py  simulate_deck_matchups.rs  v4_vs_previous_results.txt
bases/: engine-bench.Dockerfile
docs/: adding_holon_phantoms.md
engine-bench-harbor/: QUICKSTART.md  README.md  generate_tasks.py  run_benchmark.sh
gold/core_patches/: README.md
gold/implementations/: df_061_ralts.rs  df_067_totodile.rs  df_068_trapinch.rs  df_070_vulpix.rs  df_082_tv_reporter.rs  df_096_latios_ex.rs  df_097_rayquaza_ex.rs  hp_002_cradily.rs  hp_003_deoxys.rs  hp_004_deoxys.rs  hp_005_deoxys.rs  hp_006_deoxys.rs  hp_007_flygon.rs  hp_015_raichu.rs  hp_016_rayquaza.rs  hp_017_vileplume.rs  hp_020_camerupt.rs  hp_021_electrode.rs  hp_023_mawile.rs  hp_029_registeel.rs  hp_034_seviper.rs  hp_035_aerodactyl.rs  hp_037_chimecho.rs  hp_038_crawdaunt.rs  hp_044_holons_castform.rs  hp_045_heracross.rs  hp_047_lairon.rs  hp_056_wobbuffet.rs  hp_062_cubone.rs  hp_063_exeggcute.rs  hp_071_meowth.rs  hp_072_numel.rs  hp_073_oddish.rs  hp_074_omanyte.rs  hp_075_phanpy.rs  hp_076_pichu.rs  hp_078_pikachu.rs  hp_079_pikachu_delta.rs  hp_080_poochyena.rs  hp_081_psyduck.rs  (+5 more)
gold/patches/: df_007_nidoqueen.patch
gold/stubs/: df_006_nidoking.rs  df_013_arbok.rs  df_014_cloyster.rs  df_015_dewgong.rs  df_016_gligar.rs  df_019_lickitung.rs  df_021_quagsire.rs  df_023_tropius.rs  df_025_xatu.rs  df_026_bayleef.rs  df_037_seadra.rs  df_040_swellow.rs  (+35 more)
scripts/: generate_hp_eval_tests.py  run_decklist_eval.py  run_hp_eval.py  run_local_eval.py  show_seed_comparisons.py  test_daytona_single.py  test_hp_card.py  verify_gold.py
src/: __init__.py  run_eval.py  task_app.py
tcg_py/: Cargo.toml
tcg_py/src/: lib.rs
tcg_py/src/ai/: mod.rs  random_ai_v4.rs  traits.rs
tcg_py/src/ai/react/: action_parser.rs  mod.rs  render.rs
tests/: test_tcg_py_run_until_agent_turn.py
(+1681 files in other folders)
