[package]
name = "tcg_py"
version = "0.1.1"
edition = "2021"

[lib]
name = "tcg_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Published crates
tcg_core = { path = "../../overzealous/tcg_core" }
tcg_rules_ex = { path = "../../overzealous/tcg_rules_ex" }
tcg_ai = { path = "../../overzealous/tcg_ai" }

# Local AI implementations (copied from overzealous)
# We'll include the AI code directly in this crate
